--- a/Ceriyo.Toolset.WPF/Views/ClassEditorView/ClassEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ClassEditorView/ClassEditor.xaml
@@ -2,8 +2,138 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="600"
+             Background="LightGray">
+
     <Grid>
-            
+
+        <i:Interaction.Triggers>
+            <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmDeleteRequest, Mode=OneWay}">
+                <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
+            </prism:InteractionRequestTrigger>
+        </i:Interaction.Triggers>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="128"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="4,4,4,4">
+            Classes:
+        </Label>
+
+
+        <ListBox
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            DisplayMemberPath="Name"
+            SelectionMode="Single"
+            ItemsSource="{Binding Classes}"
+            SelectedItem="{Binding SelectedClass}">
+        </ListBox>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="5,5,5,5"
+            Command="{Binding NewCommand}">
+            New
+        </Button>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="5,5,5,5"
+            Command="{Binding DeleteCommand}">
+            Delete
+        </Button>
+
+
+
+        <Grid
+            Grid.Row="0"
+            Grid.Column="2"
+            Grid.RowSpan="5">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="1">
+                Name:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="2"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedClass.Name}"
+                IsEnabled="{Binding IsClassSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="3">
+                Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="4"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedClass.Tag}"
+                IsEnabled="{Binding IsClassSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="5">
+                Resref:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="6"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedClass.Resref}"
+                IsEnabled="{Binding IsClassSelected}">
+            </TextBox>
+
+        </Grid>
+
     </Grid>
 </UserControl>
