--- a/Ceriyo.Toolset.WPF/Views/CreatureEditorView/CreatureEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/CreatureEditorView/CreatureEditor.xaml
@@ -2,8 +2,391 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="600"
+             Background="LightGray">
     <Grid>
+
+        <i:Interaction.Triggers>
+            <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmDeleteRequest, Mode=OneWay}">
+                <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
+            </prism:InteractionRequestTrigger>
+        </i:Interaction.Triggers>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="128"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="4,4,4,4">
+            Creatures:
+        </Label>
+
+
+        <ListBox
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            DisplayMemberPath="Name"
+            SelectionMode="Single"
+            ItemsSource="{Binding Creatures}"
+            SelectedItem="{Binding SelectedCreature}">
+        </ListBox>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="5,5,5,5"
+            Command="{Binding NewCommand}">
+            New
+        </Button>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="5,5,5,5"
+            Command="{Binding DeleteCommand}">
+            Delete
+        </Button>
+
+        <TabControl
+            Grid.Row="0"
+            Grid.Column="3"
+            Grid.RowSpan="5">
+            <TabItem Header="Scripts">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="128"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Conversation:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnConversation}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="1"
+                        Margin="4,4,4,4">
+                        On Attacked:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnAttacked}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="2"
+                        Margin="4,4,4,4">
+                        On Damaged:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnDamaged}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="3"
+                        Margin="4,4,4,4">
+                        On Death:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnDeath}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="4"
+                        Margin="4,4,4,4">
+                        On Disturbed:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnDisturbed}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="5"
+                        Margin="4,4,4,4">
+                        On Heartbeat:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnHeartbeat}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Column="0"
+                        Grid.Row="6"
+                        Margin="4,4,4,4">
+                        On Spawned:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="6"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedCreature.OnSpawned}">
+                    </ComboBox>
+
+                </Grid>
+            </TabItem>
+            <TabItem Header="Variables">
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0">
+                        Local Strings:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="1"
+                        ItemsSource="{Binding SelectedCreature.LocalVariables.LocalStrings}"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                    <Label
+                        Grid.Row="2">
+                        Local Numbers:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="3"
+                        ItemsSource="{Binding SelectedCreature.LocalVariables.LocalFloats}"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                </Grid>
+            </TabItem>
             
+            <TabItem Header="Description">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                		Text="{Binding SelectedCreature.Description}" />
+            </TabItem>
+            <TabItem Header="Comments">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsCreatureSelected}"
+                		Text="{Binding SelectedCreature.Comment}" />
+            </TabItem>
+        </TabControl>
+
+
+        <Grid
+            Grid.Row="0"
+            Grid.Column="2"
+            Grid.RowSpan="5">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="1">
+                Name:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="2"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedCreature.Name}"
+                IsEnabled="{Binding IsCreatureSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="3">
+                Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="4"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedCreature.Tag}"
+                IsEnabled="{Binding IsCreatureSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="5">
+                Resref:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="6"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedCreature.Resref}"
+                IsEnabled="{Binding IsCreatureSelected}">
+            </TextBox>
+
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="8">
+                Class:
+            </Label>
+
+            <ListBox
+                Grid.Column="0"
+                Grid.Row="9"
+                Grid.RowSpan="3"
+                Margin="2,2,2,2"
+                DisplayMemberPath="Name"
+                IsEnabled="{Binding IsClassSelected}"
+                ItemsSource="{Binding Classes}"
+                SelectedItem="{Binding SelectedCreature.ClassResref}">
+            </ListBox>
+            
+            <Label
+                Grid.Column="0"
+                Grid.Row="12">
+                Level:
+            </Label>
+
+            <xctk:IntegerUpDown
+                Grid.Column="0"
+                Grid.Row="13"
+                Margin="4,4,4,4"
+                IsEnabled="{Binding IsCreatureSelected}"
+                Minimum="1"
+                Maximum="{Binding MaximumLevel}"
+                Value="{Binding SelectedCreature.Level}">
+            </xctk:IntegerUpDown>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="14">
+                Dialog:
+            </Label>
+
+            <ComboBox
+                Grid.Column="0"
+                Grid.Row="15"
+                Margin="4,4,4,4"
+                IsEnabled="{Binding IsCreatureSelected}"
+                ItemsSource="{Binding Dialogs}"
+                SelectedItem="{Binding SelectedCreature.DialogResref}">
+            </ComboBox>
+            
+            
+        </Grid>
+
     </Grid>
 </UserControl>
