--- a/Ceriyo.Toolset.WPF/Views/ItemEditorView/ItemEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ItemEditorView/ItemEditor.xaml
@@ -2,8 +2,380 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="600"
+             Background="LightGray">
+
     <Grid>
-            
+
+        <i:Interaction.Triggers>
+            <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmDeleteRequest, Mode=OneWay}">
+                <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
+            </prism:InteractionRequestTrigger>
+        </i:Interaction.Triggers>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="128"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="4,4,4,4">
+            Items:
+        </Label>
+
+
+        <ListBox
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            DisplayMemberPath="Name"
+            SelectionMode="Single"
+            ItemsSource="{Binding Items}"
+            SelectedItem="{Binding SelectedItem}">
+        </ListBox>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="5,5,5,5"
+            Command="{Binding NewCommand}">
+            New
+        </Button>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="5,5,5,5"
+            Command="{Binding DeleteCommand}">
+            Delete
+        </Button>
+
+        <TabControl
+            Grid.Row="0"
+            Grid.Column="3"
+            Grid.RowSpan="5">
+            <TabItem Header="Appearance">
+                
+            </TabItem>
+            <TabItem Header="Class Requirements">
+                <DataGrid 
+                    ItemsSource="{Binding SelectedItem.ClassRequirements}"
+                    AutoGenerateColumns="False"
+                    AlternatingRowBackground="#ddd"
+                    CanUserDeleteRows="False"
+                    CanUserReorderColumns="False"
+                    CanUserResizeColumns="True"
+                    CanUserResizeRows="False"
+                    CanUserSortColumns="True"
+                    CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Class Name"
+                                                IsReadOnly="True"
+                                                Binding="{Binding ClassName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Level Req."
+                                                Binding="{Binding LevelRequired}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            <TabItem Header="Properties">
+                
+            </TabItem>
+            <TabItem Header="Scripts">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="128"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Activated:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsItemSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedItem.OnActivated}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Acquired:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsItemSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedItem.OnAcquired}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Unacquired:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsItemSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedItem.OnUnacquired}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="3"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Equipped:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsItemSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedItem.OnEquipped}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="4"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Unequipped:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsItemSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedItem.OnUnequipped}">
+                    </ComboBox>
+
+                </Grid>
+            </TabItem>
+            <TabItem Header="Variables">
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0">
+                        Local Strings:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="1"
+                        ItemsSource="{Binding SelectedItem.LocalVariables.LocalStrings}"
+                        IsEnabled="{Binding IsItemSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                    <Label
+                        Grid.Row="2">
+                        Local Numbers:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="3"
+                        ItemsSource="{Binding SelectedItem.LocalVariables.LocalFloats}"
+                        IsEnabled="{Binding IsItemSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                </Grid>
+            </TabItem>
+            <TabItem Header="Description">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsItemSelected}"
+                		Text="{Binding SelectedItem.Description}" />
+            </TabItem>
+            <TabItem Header="Comments">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsItemSelected}"
+                		Text="{Binding SelectedItem.Comment}" />
+            </TabItem>
+        </TabControl>
+
+
+        <Grid
+            Grid.Row="0"
+            Grid.Column="2"
+            Grid.RowSpan="5">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="1">
+                Name:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="2"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedItem.Name}"
+                IsEnabled="{Binding IsItemSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="3">
+                Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="4"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedItem.Tag}"
+                IsEnabled="{Binding IsItemSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="5">
+                Resref:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="6"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedItem.Resref}"
+                IsEnabled="{Binding IsItemSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="7">
+                Item Type:
+            </Label>
+
+            <ListBox
+                Grid.Column="0"
+                Grid.Row="8"
+                Grid.RowSpan="3"
+                Margin="2,2,2,2"
+                IsEnabled="{Binding IsItemSelected}"
+                ItemsSource="{Binding ItemTypes}"
+                SelectedItem="{Binding SelectedItem.ItemTypeResref}">
+            </ListBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="11"
+                Margin="4,4,4,4"
+                IsEnabled="{Binding IsItemSelected}"
+                IsChecked="{Binding SelectedItem.IsUndroppable}">
+                Is Undroppable
+            </CheckBox>
+
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="12"
+                Margin="4,4,4,4"
+                IsEnabled="{Binding IsItemSelected}"
+                IsChecked="{Binding SelectedItem.IsStolen}">
+                Is Stolen
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="13"
+                Margin="4,4,4,4"
+                IsEnabled="{Binding IsItemSelected}"
+                IsChecked="{Binding SelectedItem.IsPlot}">
+                Is Plot
+            </CheckBox>
+        </Grid>
+
     </Grid>
 </UserControl>
