--- a/Ceriyo.Toolset.WPF/Views/OpenModuleView/OpenModule.xaml
+++ b/Ceriyo.Toolset.WPF/Views/OpenModuleView/OpenModule.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="Ceriyo.Toolset.WPF.Views.NewModuleView.NewModule"
+﻿<UserControl x:Class="Ceriyo.Toolset.WPF.Views.OpenModuleView.OpenModule"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"       
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             
              mc:Ignorable="d"
-             d:DesignHeight="128"
-             d:DesignWidth="282"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             Background="White"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,63 +15,33 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="32"></RowDefinition>
-            <RowDefinition Height="32"></RowDefinition>
-            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="32"></RowDefinition>
         </Grid.RowDefinitions>
         
-        <Label
+        <Label 
             Grid.Column="0"
-            Grid.Row="0">
-            Name:
-        </Label>
-
-        <TextBox
-            x:Name="TxtName"
-            Grid.Column="1"
-            Grid.ColumnSpan="2"
             Grid.Row="0"
-            Margin="5,5,5,5"
-            Text="{Binding Name}"
-            TabIndex="0">
-        </TextBox>
-        
-        <Label
+            Grid.ColumnSpan="3"
+            Content="Please select a module to load." 
+            HorizontalAlignment="Center" 
+            VerticalAlignment="Center"/>
+        <ListBox 
             Grid.Column="0"
-            Grid.Row="1">
-            Tag:
-        </Label>
-
-        <TextBox
-            Grid.Column="1"
-            Grid.ColumnSpan="2"
             Grid.Row="1"
-            Margin="5,5,5,5"
-            Text="{Binding Tag}"
-            TabIndex="1">
-        </TextBox>
-        
-        <Label
-            Grid.Row="2"
-            Grid.Column="0">
-            Resref:
-        </Label>
-
-        <TextBox
-            Grid.Row="2"
-            Grid.Column="1"
-            Grid.ColumnSpan="2"
-            Margin="5,5,5,5"
-            Text="{Binding Resref}"
-            TabIndex="2">
-        </TextBox>
+            Grid.RowSpan="3"
+            Grid.ColumnSpan="3"
+            ItemsSource="{Binding Modules}" 
+            SelectedItem="{Binding SelectedModule}"
+            SelectionMode="Single"/>
 
 
         <StackPanel
-            Grid.Row="3"
+            Grid.Row="4"
             Grid.Column="0"
             Grid.ColumnSpan="3"
             Orientation="Horizontal"
@@ -81,20 +50,19 @@
             <Button
                 MinWidth="92"    
                 Margin="4,4,4,4"
-                Command="{Binding CreateModuleCommand}"
-                TabIndex="3"
+                Command="{Binding OpenModuleCommand}"
                 IsDefault="True">
-                Create Module
+                Open Module
             </Button>
             <Button
                 MinWidth="92"    
                 Margin="4,4,4,4"
                 Command="{Binding CancelCommand}"
-                TabIndex="4"
                 IsCancel="True">
                 Cancel
             </Button>
-
         </StackPanel>
+
+
     </Grid>
 </UserControl>
