Run all application closing through same procedures.

--- a/Ceriyo.Toolset.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ApplicationRootView/ApplicationRoot.xaml
@@ -11,7 +11,10 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding WindowTitle}" Height="350" Width="525">
+        Title="{Binding WindowTitle}" 
+        Height="350" 
+        Width="525"
+        Closing="ApplicationRoot_OnClosing">
     <Grid>
 
         <Grid.RowDefinitions>
